2015-04-28  Uwe Schulzweida

	* selgrid: added parameter type var=varname to select all variables with the same grid as varname

2015-04-28  Uwe Schulzweida

	* using CDI library version 1.6.9
	* Version 1.6.9 released
	* clipping: update to YAC version 1.0.3

2015-04-23  Uwe Schulzweida

	* ydrunpctl: does not work in combination with ydrunmin/ydrunmax (bug fix)

2015-04-21  Uwe Schulzweida

	* New operator: genlevelbounds - Generate level bounds
	* Added option --reduce_dim to reduce dimension (Timstat, Fldstat)
	* Ensstat: added support for different missing values (bug fix)

2015-04-17  Uwe Schulzweida

	* Select: added parameter date

2015-04-16  Uwe Schulzweida

	* Select: added parameter startdate, enddate

2015-04-13  Karl-Hermann Wieners

	* New operator: aexpr -  Evaluate expressions and append results
	* New operator: aexprf  - Evaluate expression script and append results
	* New operator: selzaxisname  - Select z-axes by name

2015-04-10  Uwe Schulzweida

	* New operator: after - ECHAM standard post processor

2015-04-02  Uwe Schulzweida

	* Seltime: abort if no timestep is seleced

2015-03-27  Uwe Schulzweida

	* Fldstat: added parameter noweights to use constant grid cell area weights
	* expr: added support for operator ?:,&&,||

2015-03-26  Uwe Schulzweida

	* using CDI library version 1.6.8
	* Version 1.6.8 released

2015-03-25  Uwe Schulzweida

	* expr: added support for operator ?: (short ifelse)
	* eof, eof3d: use area weights instead of no weights
	* vertmean, vertavg: changed to weighted means if layer bounds are available

2015-03-23  Uwe Schulzweida

	* expr: added support for operator ?: (short ifelse test version)

2015-03-22  Uwe Schulzweida

	* configure: check whether netCDF4/HDF5 is threadsafe

2015-03-21  Uwe Schulzweida

	* expr: added support for logical operator <=>

2015-03-20  Uwe Schulzweida

	* Remap: renamed env. variable CDO_REMAP_NORMALIZE_OPT to CDO_REMAP_NORM